@@ -432,18 +432,12 @@ defaultParams = {
     'legend.isaxes'      : [True,validate_bool],  # this option is internally ignored - it never served any useful purpose
     'legend.numpoints'   : [2, validate_int],     # the number of points in the legend line
     'legend.fontsize'    : ['large', validate_fontsize],
-    'legend.pad'         : [0,   validate_float], # was 0.2, deprecated; the fractional whitespace inside the legend border
-    'legend.borderpad'   : [0.4, validate_float], # units are fontsize
     'legend.markerscale' : [1.0, validate_float], # the relative size of legend markers vs. original
-
-    # the following dimensions are in axes coords
-    'legend.labelsep'      : [0.010, validate_float], # the vertical space between the legend entries
-    'legend.handlelen'     : [0.05, validate_float], # the length of the legend lines
-    'legend.handletextsep' : [0.02, validate_float], # the space between the legend line and legend text
-    'legend.axespad'       : [0.02, validate_float], # the border between the axes and legend edge
     'legend.shadow'        : [False, validate_bool],
 
 
+    # the following dimensions are in fraction of the font size
+    'legend.borderpad'   : [0.4, validate_float], # units are fontsize
     'legend.labelspacing'      : [0.5, validate_float], # the vertical space between the legend entries
     'legend.handlelength'     : [2., validate_float], # the length of the legend lines
     'legend.handletextpad' : [.8, validate_float], # the space between the legend line and legend text
@@ -453,11 +447,6 @@ defaultParams = {
 
     'legend.markerscale' : [1.0, validate_float], # the relative size of legend markers vs. original
 
-    # the following dimensions are in axes coords
-    'legend.labelsep'      : [0.010, validate_float], # the vertical space between the legend entries
-    'legend.handlelen'     : [0.05, validate_float], # the length of the legend lines
-    'legend.handletextsep' : [0.02, validate_float], # the space between the legend line and legend text
-    'legend.axespad'       : [0.5, validate_float], # the border between the axes and legend edge
     'legend.shadow'        : [False, validate_bool],
 
 
